# IndexReplication

./: README.md  analysis.ipynb  historyIndex (1).xls  historyIndex (2).xls  historyIndex (4).xls  main.py  market_data.json  market_data2.json  procurement.ipynb  pyproject.toml
data/processed/: exclusions.parquet  inclusions.parquet  yfinance_output.parquet
data/raw/: historyIndex (3).xls
