[project]
name = "indexreplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.3",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.66",
]
